commit pour site normalement

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://zeryzez_githubgithub.io/Quizz-moi.git/",
+  "homepage": "https://zeryzez.github.io/Quizz-moi/",
   "name": "quizz",
   "version": "0.1.0",
   "private": true,
