--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://zeryzez.github.io/Quizz-moi/",
+  "homepage": "https://zeryzez.github.io/Quizz-moi",
   "name": "quizz",
   "version": "0.1.0",
   "private": true,
@@ -17,7 +17,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
